--- a/ios-developer.html
+++ b/ios-developer.html
@@ -129,7 +129,7 @@ building continuous integration pipelines; Demonstrable mastery in the?...</p>
 <p><span class="badge badge-light">Jakarta Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mastercard.wd1.myworkdayjobs.com/en-US/CorporateCareers/job/Vancouver-Canada/iOS-Software-Developer_R-96268?codes=MemberJOBSMicrosite10'>iOS Software Developer</a></h5> 
+<h5><a href='https://mastercard.wd1.myworkdayjobs.com/en-US/CorporateCareers/job/Vancouver-Canada/iOS-Software-Developer_R-96268?codes=MemberJOBSMicrosite10'>iOS Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... iOS Software Developer. Who is Mastercard? We are the global technology 
 company behind the world's fastest payments processing network. We are a 
@@ -175,7 +175,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Oct 10, 2019 ... Apply online for the job of Backend Application Developer (Node.js) at Semios.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/a64sumbjsm8othgbr1bwuh1yyr'>Senior iOS App Developer | Strategic Employment</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/a64sumbjsm8othgbr1bwuh1yyr'>Senior iOS App Developer | Strategic Employment</a></h5> 
 <p><span class="badge badge-light">Irvine, CA  Irvine</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -197,7 +197,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Pune, Maharashtra, India</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=nYGacMwh'>ServiceNow Careers - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=nYGacMwh'>ServiceNow Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Tel Aviv, Israel  Tel Aviv</span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
@@ -219,7 +219,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Vienna</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/dynamicsignal/job/oFTfbfwI'>Dynamic Signal Careers - Senior iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/dynamicsignal/job/oFTfbfwI'>Dynamic Signal Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">San Bruno, California</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -269,11 +269,11 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/info-stretch-corporation/job/oQnAafwH'>Infostretch Corporation Careers - Senior iOS Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/info-stretch-corporation/job/oQnAafwH'>Infostretch Corporation Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, CA  Redwood City</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mediamonks.workable.com/j/A8744F8CB8'>MediaMonks - Jobs: iOS Developer at MediaMonks MX - Apply online</a></h5> 
+<h5><a href='https://mediamonks.workable.com/j/A8744F8CB8'>MediaMonks - Jobs: iOS Developer at MediaMonks MX - Apply online</a></h5> 
 <p><span class="badge badge-light">Mexico City, Mexico  Mexico</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -374,7 +374,7 @@ latest technologies and machine learning algorithms. We have served 5 million?..
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TridentConsultingInc2/743999696806846-ios-developer'>Trident Consulting Inc IOS developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TridentConsultingInc2/743999696806846-ios-developer'>Trident Consulting Inc IOS developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -425,7 +425,7 @@ automotive?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Sep 23, 2019 ... Apply online for the job of JavaScript Developer at Semios.</p>
 <hr/>
-<h5><a href='https://1871.workable.com/j/8FB8A0FEDB'>1871 Member Companies - Jobs: Mobile iOS Developer - Qooley - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://1871.workable.com/j/8FB8A0FEDB'>1871 Member Companies - Jobs: Mobile iOS Developer - Qooley - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
